--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,2 +1,3 @@
 v0.1, '2014-06-08' -- Initial release.
 v0.1.1, '2014-06-14' -- Add Invoice support and fix bug.
+v0.1.2, '2015-02-03' -- Fix bug on make_url method.
