--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,3 +2,4 @@ v0.1, '2014-06-08' -- Initial release.
 v0.1.1, '2014-06-14' -- Add Invoice support and fix bug.
 v0.1.2, '2015-02-03' -- Fix bug on make_url method.
 v0.1.3, '2016-05-27' -- Call HTTPBasicAuth instead of add manually the Authorization header.
+v0.1.3.1, '2016-09-12' -- bugfix undeclared "data" variable in marketplace sub_account method.
